--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -2,3 +2,8 @@
     background-color: lightcoral;
     font-family: Verdana, DejaVu Sans, sans-serif;
 }
+
+#element-2{
+    color: blue;
+    font-size: 36px;
+}
