Add basic styles to id element-4

--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -11,3 +11,9 @@
 .odd.third{
     font-size: 24px;
 }
+
+#element-4{
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
