--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,16 +1,17 @@
 body {
   background: #eee;
-  font-family: sans-serif;
+  font-family: sans-serif;  
 }
 
 .card {
-  width: 400px;
+  width: 600px;
   background: #fff;
-  margin: 16px auto;
+  margin: 16px auto;  
+  padding: 10px;
 }
 
 .title {
-  background: #e3f4ff;
+  background: #e3f4ff;   
 }
 
 .content {
