--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -17,6 +17,9 @@ body {
 
 .content {
   background: #e3f4ff;
+  padding: 20px 10px;  
+  font-size: 20px;
+  font-weight: bold;
 }
 
 .button-container {
