--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -25,9 +25,14 @@ body {
 
 .button-container {
   background: #e3f4ff;
+  margin: 10px 0px 0px;
+  padding: 10px 0px;
+  text-align: center;
+  font-size: 20px;
+  font-weight: bold;
 }
 
-button {
+button {  
   background: white;
   border: 1px solid #eee;
 }
