--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -26,13 +26,17 @@ body {
 .button-container {
   background: #e3f4ff;
   margin: 10px 0px 0px;
-  padding: 10px 0px;
+  padding: 10px 0px;  
   text-align: center;
   font-size: 20px;
   font-weight: bold;
 }
 
 button {  
+  display: block;  
   background: white;
   border: 1px solid #eee;
+  margin: auto;
+  font-size: 20px;
+  padding: 10px 30px;  
 }
