--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -2,7 +2,7 @@
   font-family: monospace;
   background: papayawhip;
   display: flex;  
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .logo {
@@ -11,13 +11,14 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: 10px;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
-  display: flex;
-  
+  margin: 0px;
+  padding: 0px;   
 }
 
 a {
