--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -14,10 +14,6 @@ body {
   box-shadow: 0 0 8px rgba(0,0,0,.1);
   display: flex;
 }
-.links{
-  display: flex;
-  column-gap: 8px;
-}
 
 .profile-image {
   background: rebeccapurple;
@@ -50,4 +46,14 @@ a {
 
 ul {
   list-style-type: none;
+}
+
+.links{
+  display: flex;
+  column-gap: 8px;
+}
+
+.right-bar{
+  display: flex;
+  align-items: center;
 }
