--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -28,6 +28,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  padding-left: 5px;
 }
 
 button {
@@ -51,12 +52,13 @@ ul {
 .links{
   display: flex;
   column-gap: 8px;
+  padding-left: 12px;
 }
 
 .right-bar{
   display: flex;
   align-items: center;
   margin-left: auto;
-  gap: 10px;
+  gap: 15px;
   padding-right: 5px;
 }
