--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -27,3 +27,9 @@ img {
   justify-content: center;
   background: #eee;
 }
+
+.plant-info{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
