--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -9,10 +9,14 @@ img {
 
 .content{
   display: flex;
+  gap: 52px;
 }
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 32px;
 }
 
 /* do not edit this footer */
