Add basic styles to header

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -65,6 +65,11 @@ button.cancel {
   color: royalblue;
 }
 
-.modal-header{
+.modal{
   display: flex;
+}
+
+.header{
+  font-weight: bold;
+  font-size: 20px;
 }
