--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,14 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+.left-links{
+  display: flex;
+}
+.right-links{
+  display: flex;
+}
