--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -37,8 +37,13 @@ input {
 }
 
 .left-links{
-  padding-left: 10px;
+  padding-left: 15px;
 }
 .right-links{
-  padding-right: 10px;
+  padding-right: 15px;
+}
+
+a{
+  text-decoration: none;
+  color: #4b4b4b;
 }
