--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -46,4 +49,8 @@ input {
 a{
   text-decoration: none;
   color: #4b4b4b;
+}
+
+.main-content{
+  display: flex;  
 }
