Align main content to center

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -51,6 +51,9 @@ a{
   color: #4b4b4b;
 }
 
-.main-content{
+.content{
   display: flex;  
+  flex-direction: column;
+  align-self: center;
+  align-items: center;
 }
