--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -3,8 +3,7 @@ body {
   margin: 0;
   min-height: 100vh;
   display:flex;
-  flex-direction: column;
-  justify-content: space-between;
+  flex-direction: column;  
 }
 
 .header {
@@ -28,4 +27,15 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+}
+
+.main-content{
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 auto;
+}
+
+.columns{
+  display: flex;  
+  flex: 1;
 }
