--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -27,8 +27,14 @@ body {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  width: 300px;
+  max-height: 400px;
 }
 
+.card-body{
+  display: flex;
+  flex-wrap: wrap;
+}
 .main-content{
   display: flex;
   flex-direction: column;
