--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -62,6 +62,8 @@ body {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  margin: 50px;
+  gap: 30px;
 }
 .main-content{
   display: flex;
